Editra
Author: Cody Precord
Copyright: (c) Cody Precord 2005-2008
License: wxWindows

Change Log:

#-----------------------------------------------------------------------------#
Changes since last release:

VERSION 0.x.xx
DATE xx/xx/2008
12th Alpha Release

NEWS:

NEW: [features/improvements]
+Add highlighting support for System Verilog
+Add Serbian translation (contributed by Vladimir Lazic)

BUG FIXES:
+Typo in OCaml config module
+Misc UI consistancy issues

#-----------------------------------------------------------------------------#

VERSION 0.2.90
DATE 03/15/2008
11th Alpha Release

NEWS:
  This release introduces a number of major new features and improvements 
throughout the editor. The biggest addition is the new bundled CodeBrowser 
plugin for browsing classes, functions, variables and other significant 
elements of a document. In this first release CodeBrowser has support for the 
filetypes (Ada, CSS, ini, batch, ESS, Fortran, Inno Setup Scripts, Lisp, Lua, 
NSIS, Perl, Php, Python, Shell Scripts, Tcl/Tk).

In addition to the CodeBrowser there are new updated versions many other 
plugins. Launch now has added support for (Ada, haXe, Php, and PostScript). 
The Projects plugin now has added support for using the Bazaar source control 
system in addition to some other minor feature additions. Another new version 
of FileBrowser is also shipped with Editra fixing some bugs from the previous 
release.

As of this release Editra has now also been localized into Dutch and Simplified 
Chinese, other translations have also been updated. For more details on other 
changes and improvements please view the changelog below.


NEW: [features/improvements]
+New CodeBrowser plugin for browsing classes, functions, variables and other
significant objects in a code document.
+New version of Launch (add support for Ada, haXe, PHP, PostScript)
+New version of Projects Plugin (add support for Bazaar)
+Support for (Objective C, ActionScript, Scheme)